--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/server.ts",
   "scripts": {
-    "server": "npx ts-node src/server.ts"
+    "server": "npx ts-node src/server.ts",
+    "dev": "ts-node-dev src/server.ts"
   },
   "keywords": [],
   "author": "Nayara Ferreira",
@@ -16,6 +17,7 @@
     "@types/express": "^4.17.6",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
+    "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.9.3"
   }
 }
