--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,8 @@
   "main": "src/server.ts",
   "scripts": {
     "server": "npx ts-node src/server.ts",
-    "dev": "ts-node-dev src/server.ts"
+    "dev": "ts-node-dev src/server.ts",
+    "knex:migrate": "knex migrate:latest --knexfile knexfile.ts migrate:latest"
   },
   "keywords": [],
   "author": "Nayara Ferreira",
