--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
